--- a/src/html/09-table.html
+++ b/src/html/09-table.html
@@ -50,7 +50,7 @@
     </table>
     <hr />
     <h2>테이블 기본 요소</h2>
-    <tabl
+    <tab></tab
       <caption>
         멋쟁이 사자처럼 프론트엔드 스쿨 13기 스탭
       </caption>
