CSS 변수 관련 마크업

--- a/src/css/09-custom-properties.html
+++ b/src/css/09-custom-properties.html
@@ -28,5 +28,5 @@
   <div class="container">
     <p class="parent">사용자 정의 <span class="child">속성</span> 활용히기</p>
   </div>
-</body>
+</body>`
 </html>
