--- a/src/css/09-custom-properties.html
+++ b/src/css/09-custom-properties.html
@@ -28,5 +28,8 @@
   <div class="container">
     <p class="parent">사용자 정의 <span class="child">속성</span> 활용히기</p>
   </div>
+  <div class="lion">
+    <p class="parent">CSS의 <span class="child">상속</span>에 관해 알아봅시다.</p>
+  </div>
 </body>`
 </html>
