--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <li><a href="/src/css/07-nesting.html">CSS 중첩</a></li>
         <li><a href="/src/css/08-position.html">Position</a></li>
         <li><a href="/src/css/09-custom-properties.html">CSS 변수</a></li>
+        <li><a href="/src/css/10-background.html">CSS 배경</a></li>
+
       </ul>
     </div>
     <div>
