--- a/src/ui/02-notification.html
+++ b/src/ui/02-notification.html
@@ -13,11 +13,19 @@
 <body>
   <h1>알림 (Notification)</h1>
 
-  <div class="notification">
-    <div class="notification-subject">화초관리</div>
-    <div class="notification-time">6분</div>
-    <div class="notification-content">화초에 물을 줄 시간입니다.</div>
-  </div>
+<div class="container">
+    <div class="notification green">
+      <div class="notification-subject">화초관리</div>
+      <div class="notification-time">6분</div>
+      <div class="notification-content">화초에 물을 줄 시간입니다.</div>
+    </div>
+  
+    <div class="notification brown">
+      <div class="notification-subject">화초관리</div>
+      <div class="notification-time">6분</div>
+      <div class="notification-content">화초에 물을 줄 시간입니다.</div>
+    </div>
+</div>
 
 
     
