--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <ul>
         <li><a href="/src/ui/01-member-service.html">멤버 서비스 링크</a></li>
         <li><a href="/src/ui/02-notification.html">알림(Notification)</a></li>
+        <li><a href="/src/ui/03-toast.html">토스트(Toast) UI</a></li>
       </ul>
     </div>
     <div>
