--- a/src/css/11-float.html
+++ b/src/css/11-float.html
@@ -13,10 +13,10 @@
 <body>
   <h1>Float</h1>
   <div class="card good-partner">
+    <div class="subject">굿 파트너</div>
     <div class="thumbnail">
       <img src="/src/assets/drama/good-partner-narrow.webp" alt="굿 파트너" />
     </div>
-    <div class="subject">굿 파트너</div>
     <div class="content">
       차해영(장나라)과 노지석(남궁민)은 성격이 정반대인 변호사로, 우연히 같은 로펌에서 일하게 된다.
       처음에는 서로를 극도로 불편해하며 매일 다투지만, 점점 협력하며 복잡한 사건들을 해결해 나간다.
@@ -26,7 +26,8 @@
     </div>
   </div>
 
-  <div class="card man-friend-son">
+  <!-- hidden 속성은 CSS의 display: none과 같이 요소를 보이지 않도록 설정 -->
+  <div class="card mon-friend-son" hidden>
     <div class="thumbnail">
       <img src="/src/assets/drama/mon-friend-son-narrow.webp" alt="엄마 친구 아들" />
     </div>
