--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="/src/css/09-custom-properties.html">CSS 변수</a></li>
         <li><a href="/src/css/10-background.html">CSS 배경</a></li>
         <li><a href="/src/css/11-float.html">Float</a></li>
+        <li><a href="/src/css/11-float-result.html">Float 결과</a></li>
 
       </ul>
     </div>
