--- a/src/css/11-float.html
+++ b/src/css/11-float.html
@@ -8,13 +8,15 @@
   <link rel="icon" href="/src/assets/favicon/likelion.svg" />
   <link rel="preload" as="font" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT-Regular.woff2">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT.css">
-  <link rel="stylesheet" href="/src/css/styles/11-float.css" />
+  <!-- <link rel="stylesheet" href="/src/css/styles/11-float.css" /> -->
+  <!-- <link rel="stylesheet" href="/src/css/styles/11-float-result.css" /> -->
+  <link rel="stylesheet" href="/src/css/styles/11-float-ui.css" />
 </head>
 <body>
   <h1>Float</h1>
   <div class="card good-partner">
-    <div class="subject">굿 파트너</div>
-    <div class="thumbnail">
+    <div class="subject"><span>굿 파트너</span><span lang="en">(Good Partner)</span></div>
+    <div>
       <img src="/src/assets/drama/good-partner-narrow.webp" alt="굿 파트너" />
     </div>
     <div class="content">
